--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.14.3",
+    "@cloudinary/url-gen": "^1.22.0",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -39,30 +41,49 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-three/drei": "^9.105.6",
+    "@react-three/fiber": "^8.15.14",
+    "@supabase/supabase-js": "^2.76.1",
     "@tanstack/react-query": "^5.90.2",
+    "@types/bcryptjs": "^3.0.0",
+    "@types/crypto-js": "^4.2.2",
+    "@types/gapi": "^0.0.47",
+    "@types/gapi.auth2": "^0.0.61",
+    "@types/gapi.client.drive": "^3.0.15",
+    "@types/three": "^0.180.0",
+    "@types/uuid": "^11.0.0",
+    "@uploadcare/react-uploader": "^1.10.2",
+    "@uploadcare/upload-client": "^6.18.0",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "filestack-js": "^4.2.4",
+    "filestack-react": "^6.0.0",
     "framer-motion": "^12.23.24",
+    "googleapis": "^164.1.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-google-drive-picker": "^1.2.2",
     "react-hook-form": "^7.61.1",
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
     "react-tsparticles": "^2.12.2",
-    "reactjs-human-body": "^0.0.8",
     "recharts": "^2.15.4",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.180.0",
     "tsparticles": "^3.9.1",
     "tsparticles-slim": "^2.12.0",
+    "uuid": "^13.0.0",
     "vaul": "^0.9.9",
     "zod": "^3.25.76"
   },
